# minigame_engine

./: .gitignore  CMakeLists.txt  README.md
img/: 2025-11-12 18-15-25.mkv  2025-12-22 00-35-01.mkv  img.txt
img/Assets/models/: models.txt
include/engine/: game.hpp  input.hpp  render.hpp  time.hpp  window.hpp
src/: main.cpp
src/engine/: game.cpp  game_component.cpp  input.cpp  render.cpp  time.cpp  window.cpp
src/engine/assets/: prefab.cpp
src/engine/assets/assets_manager/: assets_manager.cpp  texture_manager.cpp
src/engine/component/: component_api.cpp  component_config.cpp  component_keycapture.cpp  component_manager.cpp  game_component.cpp
src/engine/window_editor/: window_assets.cpp  window_editor.cpp  window_game.cpp  window_hierarchy.cpp  window_inspector.cpp  window_manager.cpp  window_manager_abst.cpp  window_scene.cpp
src/engine/window_editor/hierarchy/: hierarchy_model.cpp  hierarchy_sync.cpp  hierarchy_ui.cpp
src/engine/window_editor/scene/: scene_ctx.cpp  scene_data.cpp  scene_input.cpp  scene_ui.cpp
src/include/: componentDefaults.hpp  game.h  game.hpp  game_component.hpp  input.h  input.hpp  render.h  render.hpp  time.h  time.hpp  window.h  window.hpp
src/include/assets/: texture.h  texture.hpp  util.hpp
src/include/assets/assets_manager/: assets_manager.h  assets_manager.hpp  texture_manager.hpp
src/include/component/: componentDefaults.h  componentDefaults.hpp  component_api.h  component_api.hpp  component_config.hpp  component_keycapture.h  component_keycapture.hpp  component_manager.hpp  game_component.h  game_component.hpp
src/include/window_editor/: window_assets.h  window_assets.hpp  window_base.h  window_base.hpp  window_editor.h  window_editor.hpp  window_game.h  window_game.hpp  window_hierarchy.h  window_hierarchy.hpp  window_inspector.h  window_manager.h  window_manager.hpp  window_manager_abstra.hpp  window_manager_other.hpp  window_scene.h  window_scene.hpp  window_scene_sprite.h  window_scene_sprite.hpp
src/include/window_editor/hierarchy/: hierarchy_model.h  hierarchy_sync.h  hierarchy_ui.h
src/include/window_editor/scene/: scene_ctx.h  scene_data.h  scene_input.h  scene_ui.h
src/shader/: shader.hlsl
